adjusted and made correction on my html and advanced my css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <label for="lastname">Last Name</label>
                         <input type="text" class="form-input" placeholder="Doe">
                     </div>
-                    <div class="form-control">
+                    <div class="form-control email">
                         <label for="email">E-mail</label>
                         <input type="text" class="form-input email-input" placeholder="Janedoe@example.com">
                     </div>
@@ -76,7 +76,7 @@
         </div>
         <div class="col-2">
             <p class="freelancer">Freelancer</p>
-            <h5>$99 /year</h5>
+            <h5><sup>$</sup> <span> 99</span> /year</h5>
             <p class="renew-text">Automatic renews</p>
             <p class="renew-text">after 1 year</p>
             <p class="display-inline">
@@ -104,8 +104,11 @@
         </div>
     </div>
    </section>
-   <p class="copywrite">
-    © 2018 WP Pusher IVS  ·  Terms of Service
-   </p>
+
+   <footer>
+    <p class="copywrite">
+        © 2018 WP Pusher IVS  ·  Terms of Service
+       </p>
+   </footer>
 </body>
 </html>
